HouseApp/Deployement/Kubernetes/UI-Deployment.yaml
# https://kubernetes.io/docs/concepts/overview/working-with-objects/

apiVersion: apps/v1
kind: Deployment
metadata:
  name: houseapp-ui-deployment
spec:
  selector:
    matchLabels:
      app: ui-app
  replicas: 1
  template:
    metadata:
      labels:
        app: ui-app
    spec:
      containers:
        - name: ui-api
          image: madworld/houseapp/ui:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: houseapp-ui-loadbalancer
spec:
  selector:
    app: ui-app
  ports:
    - protocol: TCP
      name: http
      port: 8082
      targetPort: 80
  type: LoadBalancer
