HouseApp/Deployement/Kubernetes/Weather-Deployment.yaml
# https://kubernetes.io/docs/concepts/overview/working-with-objects/

apiVersion: apps/v1
kind: Deployment
metadata:
  name: houseapp-weather-deployment
spec:
  selector:
    matchLabels:
      app: weather-api
  replicas: 1
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
        - name: weather-api
          image: madworld/houseapp/weather
          imagePullPolicy: Never
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: houseapp-weather-loadbalancer
spec:
  selector:
    app: weather-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: houseapp-weather-ingress
spec:
  rules:
    - host: weather.houseapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: houseapp-weather-loadbalancer
                port:
                  number: 80
